# NEA-Project

./: .gitignore  Cargo.toml  README.md
.cargo/: config
.github/workflows/: build.yml  nightly_lints.yml
benches/: benchmark.rs
granular_plugin/: README.md  bundler.toml
granular_plugin/src/: lib.rs
src/: delay_buffer.rs  delay_line.rs  diffusion.rs  envelope.rs  filter.rs  grain.rs  interpolators.rs  lfo.rs  lib.rs  midi.rs  modulation.rs  multi_channel.rs  resample.rs  reverb.rs  samples.rs  saturation.rs  smoothers.rs  timing.rs
tests/: integration_tests.rs  kalimba_delay_2  kalimba_delay_3  superstition_delay_1
