[package]
name = "granular_plugin"
version = "0.1.0"
edition = "2021"
authors = ["Ben Ford <17bford@tythy.school>"]
license = "ISC"
homepage = "https://youtu.be/dQw4w9WgXcQ"
description = "A granular synthesis plugin with reverb, delay and modulation fx"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
hound = "3.5.0"
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default_features = false, features = ["assert_process_allocs"] }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
